# store-api

./: .env.example  .gitignore  README.md  config.py  database.py  main.py  pyproject.toml  test.db
routers/: post.py
storeapi/: database.py  logging_conf.py  main.py
storeapi/routers/: post.py
storeapi/tests/: conftest.py
storeapi/tests/routers/: test_post.py
tests/: conftest.py
tests/routers/: test_post.py
