[project]
name = "store-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databases[aiosqlite]>=0.9.0",
    "fastapi>=0.135.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "uvicorn[standard]>=0.44.0",
]
